- integration of wiki pages
- detail pages for quests, regions and dungeons
- links from NPC, items and creatures to related quests
- new, cleaner layout with drop down menus
- galleries e. g. for screenshots
- website now works on small devices


*fixes*
- length of text messages limited
- wedding ring supports double click
- message on shocked
- code cleanup and documentation improvements



1.13
10th February 2014

*world*
- nice zone names
- dragon slayer achievement
- Xeno helmet added to NPC purchasing shops
- improvements to maps
- rats are so hungry that they are not scared by weak people anymore

*fixes*
- fixed webstart on Oracle Java
- postman messages are now filtered by the ignore list
- fixed item description for canned tuna (item name underlining)

*website*
- removed myopenid as it is going to be discontinued


*developer's note*
- If you developed a game based on stendhal and use the automatic updater, 
  you will need to edit game.properties and add UPDATE_SIGNER_KEY. 
  The required value will printed in the webstart console.


1.12.1

*fixes*
- disabled reference to an empty item file which broke the website
- fixed a karma exploit on accepting accpeted quests
- fixed PVP defense against weaker players 


1.12
12th December 2013

*world*
- New Christmas maps for bank, townhall, storage (Eonnas house, all Semos)
- Meet Santa and Rudolph
- Dragon now notice small players right in front
- Reworked normal storage interior
- More creature descriptions
- New stocking items, deleting coal
- New sounds and images

*fixes*
- Fixing tiles on several maps
- Sometimes xp reward for killing creatures was too low, if the player logged out during the fight
- On expire of a special outift, a message was displayed, even when the outfit has been removed beforehand

*website*
- Display name of ip-address on login history

*developer*
- Replaced commons-lang.jar with guava.jar (needs to be changed in Eclise: Project | Properties | Build Path | Libraries)



1.11